--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 
     <div id="abt-overlay">
         <div class="content">
-            <h1>About Me</h1>
             <table id="abttable">
                  <tr>
                     <td rowspan="3">
@@ -25,9 +24,8 @@
                 <tr>
                     <td>
                         <h3>Skills</h3>
-                        <li>Python, HTML, SQL</li>
-                        <li>UI path, Linux, Cisco</li>
-                        <li>Microsoft office, Power BI, Tableau</li>
+                        <li>Python, HTML, SQL, UI path, Linux,</li>
+                        <li>Cisco, Microsoft office, Power BI, Tableau</li>
                     </td>
                 </tr>
 
@@ -46,25 +44,28 @@
     </div>
     <div id="proj-overlay">
         <div class="content">
-            <h1>Projects</h1>
             <table id="projtable">
                 <tr>
-                 <td><h2>Project 1</h2></td>
-                 <td><h2>Project 2</h2></td> 
-                 <td><h2>Project 3</h2></td>    
+                    <td>
+                        <h2>Project 1</h2>
+                        <h3>Designed SQL database for soccer clubs</h3>
+                        <p>As a team, we designed table relationships, defined appropriate data types, populated
+                        structured data, and built a functional database using SQL Server Management Studio to store.</p>
+                    </td> 
                 </tr>
                 
                 <tr>
                     <td>
-                        <h3>Designed SQL database for soccer clubs</h3>
-                        <p>As a team, we designed table relationships, defined appropriate data types, populated
-                        structured data, and built a functional database using SQL Server Management Studio to store.</p>
-                    </td>
-                    <td><h3>File handling using Python</h3>    
+                        <h2>Project 2</h2>
+                        <h3>File handling using Python</h3>    
                         <p>Automated file handling by downloading files from FTP server, organising directories, encrypting and decrypting files, 
                         logging access activity, and using Task Scheduler to automate workflow and reduce manual troubleshooting time.</p>
-                    </td>    
+                    </td>   
+                </tr>    
+                
+                <tr>
                     <td>
+                        <h2>Project 3</h2>
                         <h3>Hardened Linux OS</h3>
                         <p>Install firewall and antivirus software, automate regular audits, edit configuration SSH to disable root and password login, 
                         change default port, and using security audit tools to verify security policies are disabled and identifying weakness.</p>
