--- a/index.html
+++ b/index.html
@@ -47,28 +47,27 @@
             <table id="projtable">
                 <tr>
                     <td>
-                        <h2>Project 1</h2>
+                        <h2><a href="Designed SQL database for soccer clubs.pdf">Project 1</a></h2>
                         <h3>Designed SQL database for soccer clubs</h3>
-                        <p>As a team, we designed table relationships, defined appropriate data types, populated
-                        structured data, and built a functional database using SQL Server Management Studio to store.</p>
+                        <p>As a team, we developed SSMS structured database with optimized table relationships. 
+                        I also used Trello to manage each component development timeline to track progress effectively.</p>
                     </td> 
                 </tr>
                 
                 <tr>
                     <td>
-                        <h2>Project 2</h2>
-                        <h3>File handling using Python</h3>    
-                        <p>Automated file handling by downloading files from FTP server, organising directories, encrypting and decrypting files, 
-                        logging access activity, and using Task Scheduler to automate workflow and reduce manual troubleshooting time.</p>
+                        <h2><a href="Storage Management with Python.pdf">Project 2</a></h2>
+                        <h3>Storage Management using Python</h3>    
+                        <p>Automated secure FTP transfers and file encryption, 
+                        logging access activity using Task Scheduler to reduce manual troubleshooting time.</p>
                     </td>   
                 </tr>    
                 
                 <tr>
                     <td>
-                        <h2>Project 3</h2>
+                        <h2><a href="Harden Linux OS.pdf">Project 3</a></h2>
                         <h3>Hardened Linux OS</h3>
-                        <p>Install firewall and antivirus software, automate regular audits, edit configuration SSH to disable root and password login, 
-                        change default port, and using security audit tools to verify security policies are disabled and identifying weakness.</p>
+                        <p>Install firewall and antivirus software, automate regular audits, edit SSH configurations, and using security audit tools to verify security policies are disabled and identifying weakness.</p>
                     </td>
                 </tr>
             </table>
