--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
                     <td>
                         <h2><a href="Harden Linux OS.pdf">Project 3</a></h2>
                         <h3>Hardened Linux OS</h3>
-                        <p>Install firewall and antivirus software, automate regular audits, edit SSH configurations, and using security audit tools to verify security policies are disabled and identifying weakness.</p>
+                        <p>Install firewall and antivirus software,  edit SSH configurations, 
+                        automate regular audits to verify security policies adhered and identify weakness.</p>
                     </td>
                 </tr>
             </table>
